Bug 557557 - Properly handle destruction in taskbar previews when the window outlives the preview r=jimm